# build-your-own-x-in-rust

./: Cargo.toml
ray-tracer/: Cargo.toml  README.md
ray-tracer/src/: debug.rs  geom.rs  main.rs  scene.rs  tracer.rs
