[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.38.0"
roots = "0.0.8"
append-only-vec = "0.1.8"
ndarray = { version = "0.17.2", features = ["blas"] }
ndarray-linalg = { version = "0.18.1", features = ["netlib-static"] }
